regression/fail/modules.10.sml
type 'a u = int
signature S =
   sig
      type 'a t
   end where type t = u
